--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core"]
 	path = core
-	url = https://uimeet@bitbucket.org/thailand-xxx/amengsms-core.git
+	url = https://github.com/uimeet/AmengSMS-Core.git
